--- a/experiments/config.json
+++ b/experiments/config.json
@@ -1,35 +1,25 @@
 {
     "shared": {
+        "area_extents": [-40, 40, -5, 3, 0, 70],
+        "voxel_size": [1, 1, 1],
+        "number_T": 100,
+        "use_random_sampling": true,
         "scales": [800],
         "max_size": 1333,
         "anchor_scales": [8],
         "anchor_ratios": [0.5, 1, 2],
-        "anchor_stride": 4,
+        "anchor_stride": 2,
         "bbox_normalize_stats_precomputed": true,
         "bbox_normalize_stds": [0.1, 0.1, 0.2, 0.2],
         "bbox_normalize_means": [0, 0, 0, 0],
 	    "roi_align": true,
         "with_keypoint": false,
         "with_mask": true,
-        "num_classes": 81,
+        "num_classes": 4,
+        "num_anchors": 6,
         "class_names": [
             "__background__",
-            "person", "bicycle", "car", "motorcycle", "airplane",
-            "bus", "train", "truck", "boat", "traffic light",
-            "fire hydrant", "stop sign", "parking meter", "bench", "bird",
-            "cat", "dog", "horse", "sheep", "cow",
-            "elephant", "bear", "zebra", "giraffe", "backpack",
-            "umbrella", "handbag", "tie", "suitcase", "frisbee",
-            "skis", "snowboard", "sports ball", "kite", "baseball bat",
-            "baseball glove", "skateboard", "surfboard", "tennis racket", "bottle",
-            "wine glass", "cup", "fork", "knife", "spoon",
-            "bowl", "banana", "apple", "sandwich", "orange",
-            "broccoli", "carrot", "hot dog", "pizza", "donut",
-            "cake", "chair", "couch", "potted plant", "bed",
-            "dining table", "toilet", "tv", "laptop", "mouse",
-            "remote", "keyboard", "cell phone", "microwave", "oven",
-            "toaster", "sink", "refrigerator", "book", "clock",
-            "vase", "scissors", "teddy bear", "hair drier", "toothbrush"
+            "person", "bicycle", "car", "motorcycle", "airplane"
         ],
         "fix_layer_num": 1,
         "allowed_border": 0,
